Now archivedExchanges API are implemented. The GET API for exchanges are now distincted in /active and /archived
